--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
 .App {
-  text-align: center;
+  font-family: sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  margin-left: 40px;
+  margin-right: 40px;
+  margin-bottom: 40px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+button {
+  font-family: sans-serif;
+  padding: 150px;
+  margin-right: 2.5px;
+  margin-left: 2.5px;
+  /* margin-left: 5px; */
+
+  border: none;
+  border-radius: 3px;
+  /* padding: 150px; */
+  display: inline;
+  /* flex-direction: column; */
+  /* justify-content: space-around; */
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media screen and (min-width: 680px) {
+  .container {
+    display: flex;
+    /* flex-direction: column; */
+    justify-content: space-between;
+    margin: 40px;
   }
 }
